--- a/FlopEngine/FlopEngine.vcxproj
+++ b/FlopEngine/FlopEngine.vcxproj
@@ -134,6 +134,8 @@
     <ClCompile Include="boid.cpp" />
     <ClCompile Include="boids_helper.cpp" />
     <ClCompile Include="boids_window.cpp" />
+    <ClCompile Include="delaunay_triangulator.cpp" />
+    <ClCompile Include="delaunay_window.cpp" />
     <ClCompile Include="flock.cpp" />
     <ClCompile Include="marching_window.cpp" />
     <ClCompile Include="math.cpp" />
@@ -146,6 +148,8 @@
     <ClInclude Include="boids_helper.hpp" />
     <ClInclude Include="boids_window.hpp" />
     <ClInclude Include="concepts.hpp" />
+    <ClInclude Include="delaunay_triangulator.hpp" />
+    <ClInclude Include="delaunay_window.hpp" />
     <ClInclude Include="file_observer.hpp" />
     <ClInclude Include="flock.hpp" />
     <ClInclude Include="flop_engine.hpp" />
