--- a/FlopEngine/FlopEngine.vcxproj.filters
+++ b/FlopEngine/FlopEngine.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClCompile Include="libs\geometry\rectangle.cpp" />
     <ClCompile Include="marching\marching_window.cpp" />
     <ClCompile Include="quadtree\quadtree_window.cpp" />
+    <ClCompile Include="libs\gui\object.cpp" />
+    <ClCompile Include="libs\gui\master.cpp" />
+    <ClCompile Include="libs\gui\button.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="geometry\edge.hpp" />
@@ -52,6 +55,9 @@
     <ClInclude Include="marching\marching_grid.hpp" />
     <ClInclude Include="marching\marching_window.hpp" />
     <ClInclude Include="quadtree\quadtree_window.hpp" />
+    <ClInclude Include="libs\gui\master.hpp" />
+    <ClInclude Include="libs\gui\object.hpp" />
+    <ClInclude Include="libs\gui\button.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
