--- a/FlopEngine/FlopEngine.vcxproj
+++ b/FlopEngine/FlopEngine.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="libs\graphics\flop_engine.hpp" />
     <ClInclude Include="libs\graphics\glut_functions.hpp" />
     <ClInclude Include="libs\gui\master.hpp" />
+    <ClInclude Include="libs\logger\logger.hpp" />
     <ClInclude Include="libs\math\math.hpp" />
     <ClInclude Include="libs\geometry\rectangle.hpp" />
     <ClInclude Include="libs\quadtree\quadtree.hpp" />
@@ -183,6 +184,7 @@
     <ClCompile Include="libs\graphics\drawing.cpp" />
     <ClCompile Include="libs\graphics\glut_functions.cpp" />
     <ClCompile Include="libs\gui\master.cpp" />
+    <ClCompile Include="libs\logger\logger.cpp" />
     <ClCompile Include="libs\math\math.cpp" />
     <ClCompile Include="libs\geometry\rectangle.cpp" />
     <ClCompile Include="main.cpp" />
