--- a/FlopEngine/FlopEngine.vcxproj
+++ b/FlopEngine/FlopEngine.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="utils\blocker.hpp" />
     <ClInclude Include="utils\concepts.hpp" />
     <ClInclude Include="utils\file_observer.hpp" />
+    <ClInclude Include="utils\ranges.h" />
     <ClInclude Include="utils\singleton.hpp" />
     <ClInclude Include="utils\utils.hpp" />
     <None Include="packages.config" />
