--- a/FlopEngine/FlopEngine.vcxproj.filters
+++ b/FlopEngine/FlopEngine.vcxproj.filters
@@ -69,6 +69,7 @@
     <ClInclude Include="libs\gui\input_param_box.hpp" />
     <ClInclude Include="utils\ranges.h" />
     <ClInclude Include="libs\quadtree\quadtree_implementation.hpp" />
+    <ClInclude Include="libs\quadtree\quadtree_const_iterator_impl.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
