--- a/FlopEngine/FlopEngine.vcxproj.filters
+++ b/FlopEngine/FlopEngine.vcxproj.filters
@@ -70,6 +70,7 @@
     <ClInclude Include="utils\ranges.h" />
     <ClInclude Include="libs\quadtree\quadtree_implementation.hpp" />
     <ClInclude Include="libs\quadtree\quadtree_const_iterator_impl.h" />
+    <ClInclude Include="utils\fixed_size_queue.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
