--- a/FlopEngine/FlopEngine.vcxproj.filters
+++ b/FlopEngine/FlopEngine.vcxproj.filters
@@ -55,7 +55,6 @@
     <ClInclude Include="libs\geometry\rectangle.hpp" />
     <ClInclude Include="libs\quadtree\quadtree.hpp" />
     <ClInclude Include="libs\quadtree\quadtree_help.hpp" />
-    <ClInclude Include="marching\marching_grid.hpp" />
     <ClInclude Include="marching\marching_window.hpp" />
     <ClInclude Include="quadtree\quadtree_window.hpp" />
     <ClInclude Include="libs\gui\master.hpp" />
@@ -71,8 +70,11 @@
     <ClInclude Include="libs\quadtree\quadtree_implementation.hpp" />
     <ClInclude Include="libs\quadtree\quadtree_const_iterator_impl.h" />
     <ClInclude Include="utils\fixed_size_queue.hpp" />
+    <ClInclude Include="libs\marching\marching_grid.hpp" />
+    <ClInclude Include="libs\marching\marching_grid_impl.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="boids\params.json" />
   </ItemGroup>
 </Project>
