--- a/FlopEngine/FlopEngine.vcxproj
+++ b/FlopEngine/FlopEngine.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="utils\concepts.hpp" />
     <ClInclude Include="utils\file_observer.hpp" />
     <ClInclude Include="utils\fixed_size_queue.hpp" />
+    <ClInclude Include="utils\grid.hpp" />
     <ClInclude Include="utils\ranges.h" />
     <ClInclude Include="utils\singleton.hpp" />
     <ClInclude Include="utils\utils.hpp" />
